test/tests/stages/8_loops/valid/nested_break.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[70]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(ans)
  =
  const int(0)
  ;
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  for
  (
  int
  identifier(j)
  =
  const int(0)
  ;
  identifier(j)
  <
  const int(10)
  ;
  identifier(j)
  =
  identifier(j)
  +
  const int(1)
  )
  if
  (
  (
  identifier(i)
  /
  const int(2)
  )
  *
  const int(2)
  ==
  identifier(i)
  )
  break
  ;
  else
  identifier(ans)
  =
  identifier(ans)
  +
  identifier(i)
  ;
  return
  identifier(ans)
  ;
  }
