test/tests/stages/8_loops/invalid_parse/extra_credit/compound_assignment_invalid_decl.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  +=
  const int(1)
  ;
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  +=
  const int(1)
  )
  {
  return
  const int(0)
  ;
  }
  }
